[package]
name = "escrow_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
solana-program = "1.15.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
thiserror = "1.0.38"

[lib]
crate-type = ["cdylib", "lib"]
